alignment fixed 2: electric boogalo

--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   font-size: 0;
   padding: 0;
+  background-color: blue;
 }
 #navbar {
   width: 100%;
@@ -146,7 +147,6 @@ nav a {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-  margin-left: 208;
 }
 .message {
   width: 100%;
